Revision history for Perl extension Metabrik.

1.10
   - FEATURE: shell::command: use_sudo Attribute to launch sudo on executing external command
   - UPDATE: moved attributes_default() from brik_use_properties to brik_properties when 
     there is no need to use $self. It allows instanciated Attributes inheritage to work.
   - new: shell::command: execute Command to use capture_mode Attribute to launch either 
     capture or system Command
   - bugfix: core::context: save_state to use Metabrik brik_attributes Command to correctly 
     retrieve all Brik Attributes even those inherited
   - bugfix: core::shell: display error on chdir() failure
   - bugfix: Metabrik: error checking within new_from_brik_init Command
   - bugfix: Metabrik: logging correctly on class calls to _log_*()

1.09
   - FEATURE: core::shell/core::context: supports passing Perl code directly as Commands
              Arguments. Example: run database::sqlite create MyTable "[ qw(field1 field2) ]"
   - RENAME: core::shell: help_show_brik_attributes => help_show_base_attributes
   - RENAME: core::shell: help_show_brik_commands => help_show_base_commands
   - RENAME: core::shell: comp_show_brik_attributes => comp_show_base_attributes
   - RENAME: core::shell: comp_show_brik_commands => comp_show_base_commands
   - UPDATE: core::shell: rework of help/completion scheme
   - UPDATE: core::shell: help Command rewritten to show help for Metabrik only (not Term:Shell)
   - bugfix: core::shell: use unique match to run Commands
   - bugfix: shell::command: correctly check return value from system Command for errors
   - new: core::shell: get_help/comp_attributes and get_help/comp_commands Commands
   - new: Metabrik: brik_base_attributes, brik_inherited_attributes, brik_own_attributes Commands
   - new: Metabrik: brik_base_commands, brik_inherited_commands, brik_own_commands Commands

1.08 Thu Mar 19 06:48:34 CET 2015
   - FEATURE: core::shell: run executable commands found in PATH through system Command